[gd_scene load_steps=13 format=3 uid="uid://bax0u2n2sk0vg"]

[ext_resource type="Script" path="res://Player/Inventory.gd" id="1_cw3s8"]
[ext_resource type="Texture2D" uid="uid://bsdpd37oq8xnn" path="res://Welt/Game-Boy-Advance-Pokemon-Ruby-Sapphire-Buildings.png" id="2_0x0ji"]
[ext_resource type="Texture2D" uid="uid://bsdowge0hew14" path="res://Welt/arrow.png" id="3_3fdxg"]

[sub_resource type="AtlasTexture" id="AtlasTexture_nhh1g"]
atlas = ExtResource("2_0x0ji")
region = Rect2(0, 0, 103, 83)

[sub_resource type="AtlasTexture" id="AtlasTexture_ad2mp"]
atlas = ExtResource("2_0x0ji")
region = Rect2(73, 83, 73, 83)

[sub_resource type="AtlasTexture" id="AtlasTexture_tprn0"]
atlas = ExtResource("2_0x0ji")
region = Rect2(348, 83, 87, 83)

[sub_resource type="AtlasTexture" id="AtlasTexture_u17np"]
atlas = ExtResource("2_0x0ji")
region = Rect2(87, 166, 87, 83)

[sub_resource type="AtlasTexture" id="AtlasTexture_8u80g"]
atlas = ExtResource("2_0x0ji")
region = Rect2(0, 83, 72, 83)

[sub_resource type="SpriteFrames" id="SpriteFrames_e4nrv"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_nhh1g")
}],
"loop": true,
"name": &"moonetenGenerator",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ad2mp")
}],
"loop": true,
"name": &"moonetenStorage",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_tprn0")
}],
"loop": true,
"name": &"moonstoneGenerator",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_u17np")
}],
"loop": true,
"name": &"moonstoneStorage",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_8u80g")
}],
"loop": true,
"name": &"shopPlay",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_wcygi"]
atlas = ExtResource("3_3fdxg")
region = Rect2(0, 0, 200, 200)

[sub_resource type="SpriteFrames" id="SpriteFrames_c4j3v"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_wcygi")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="SystemFont" id="SystemFont_418wv"]
font_names = PackedStringArray("Comic Sans MS")

[node name="Inventar" type="StaticBody2D"]
script = ExtResource("1_cw3s8")

[node name="ColorRect" type="ColorRect" parent="."]
offset_right = 101.0
offset_bottom = 74.0
color = Color(0.34902, 0.4, 0.541176, 0.658824)

[node name="icon" type="AnimatedSprite2D" parent="."]
position = Vector2(49, 23)
scale = Vector2(0.708333, 0.554217)
sprite_frames = SubResource("SpriteFrames_e4nrv")
animation = &"moonstoneStorage"

[node name="buttonleft" type="Button" parent="."]
modulate = Color(1, 1, 1, 0)
offset_left = 48.0
offset_top = 50.0
offset_right = 72.0
offset_bottom = 64.0
rotation = 1.5708

[node name="arrowleft" type="AnimatedSprite2D" parent="."]
texture_filter = 1
position = Vector2(41, 63)
scale = Vector2(0.05, 0.05)
sprite_frames = SubResource("SpriteFrames_c4j3v")

[node name="buttonright" type="Button" parent="."]
modulate = Color(1, 1, 1, 0)
offset_left = 67.0
offset_top = 50.0
offset_right = 91.0
offset_bottom = 64.0
rotation = 1.5708

[node name="arrowright" type="AnimatedSprite2D" parent="."]
texture_filter = 1
position = Vector2(60, 63)
rotation = -3.14159
scale = Vector2(0.05, 0.05)
sprite_frames = SubResource("SpriteFrames_c4j3v")

[node name="buttonbuy" type="Button" parent="."]
modulate = Color(1, 1, 1, 0)
texture_filter = 1
offset_left = 24.0
offset_top = 1.0
offset_right = 74.0
offset_bottom = 45.0

[node name="countLabel" type="Label" parent="."]
texture_filter = 1
offset_left = 74.0
offset_top = 48.0
offset_right = 99.0
offset_bottom = 74.0
theme_override_fonts/font = SubResource("SystemFont_418wv")
theme_override_font_sizes/font_size = 14
text = "3"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="buttonleft" to="." method="_on_buttonleft_pressed"]
[connection signal="pressed" from="buttonright" to="." method="_on_buttonright_pressed"]
[connection signal="pressed" from="buttonbuy" to="." method="_on_buttonbuy_pressed"]
